edited index page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>My Web Development Portfolio</title>
+  <link rel="icon" href="/img/favicon/favicon.ico" sizes="16x16">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
   <link rel="stylesheet" href="/dist/css/main.css">
@@ -45,19 +46,19 @@
       <span class="text-secondary">Kilonzo</span>
     </h1>
     <h2 class="sm-heading">
-      Web Developer, Programmer, Designer & Entreprenuer
+      Web Developer, Web Programmer, Web Designer
     </h2>
     <div class="icons">
-      <a href="#!">
+      <a href="https://twitter.com/NeverForget_K">
         <i class="fab fa-twitter fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://www.linkedin.com/comm/in/stephen-kilonzo-00669571/">
         <i class="fab fa-linkedin fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://github.com/Steve-conqueror1">
         <i class="fab fa-github fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://vk.com/skilonzo">
         <i class="fab fa-vk fa-2x"></i>
       </a>
     </div>
