--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Contact Me</title>
+  <link rel="icon" href="/img/favicon/favicon.ico" sizes="16x16">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
   <link rel="stylesheet" href="/dist/css/main.css">
@@ -49,13 +50,19 @@
     </h2>
     <div class="boxes">
       <div>
-        <span class="text-secondary">Email:</span> stevekilo@gmail.com
+        <span class="text-secondary">
+          <i class="far fa-envelope 2x"></i>
+        </span> stevesabkilo@gmail.com
       </div>
       <div>
-        <span class="text-secondary">Adress:</span> Moscow, Christ the saviour 14
+        <span class="text-secondary">
+          <i class="fas fa-map-marker-alt"></i>
+        </span> Moscow, Christ the saviour 14
       </div>
       <div>
-        <span class="text-secondary">Phone:</span> +79004324898
+        <span class="text-secondary">
+          <i class="fas fa-phone-volume 2x"></i>
+        </span> +79001105390
       </div>
     </div>
 
